--- a/TP2.css
+++ b/TP2.css
@@ -14,8 +14,7 @@
     padding-left: 50px;
     padding-right: 50px;
     align-items: center;
-
-}
+    align-itemsytftytffftff
 
 .logo img {
     width: 70px;
