--- a/TP2.css
+++ b/TP2.css
@@ -14,7 +14,8 @@
     padding-left: 50px;
     padding-right: 50px;
     align-items: center;
-    align-itemsytftytffftff
+
+}
 
 .logo img {
     width: 70px;
