--- a/TP1.css
+++ b/TP1.css
@@ -1,6 +1,10 @@
+body {
+    margin: 0px
+}
+
 .principal {
-    height:800px;
-    background-image: URL(fondo.jpg);   
+    height: 900px;
+    background-image: URL(./img/fondo.jpg);   
 }
 
 .menu {
@@ -30,21 +34,9 @@
 .nav a {
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    color: yellow;
+    color: #FFFF00;
     text-decoration: none;
     margin-left: 50px
-}
-
-.textoprincipal {
-    width: 80%;
-    text-align: justify;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 17;
-    margin-left: 100px;
-    margin-top: 60px;
-    font-weight: bold;
-    border: solid 3px;
-    padding: 20px
 }
 
 .primerainfo {
@@ -52,13 +44,222 @@
     margin-top: 80px;
     width: 80%;
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 80px
 }
 
-.imagenoficina img{
-    width: 90%
+.imagenoficina {
+    width: 45%
+}
+
+.imagenoficina img {
+    width: 100%;
+    height: auto;
 }
 
 .textoficina {
-    width: 90%;
+    width: 45%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: justify;
+    margin: 0px
+}
+
+.secciones {
+    height: 250px;
+    background-color: rgba(0,0,0,.8);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 50px
+}
+
+.nosotrasseccion img {
+    width: 150px;
+    height: 150px;
+}
+
+.portfolioseccion img {
+    width: 150px;
+    height: 150px;
+}
+
+.contactoseccion img {
+    width: 150px;
+    height: 150px;
+}
+
+.nosotrasseccion p {
+    color:#FFFF00;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+    font-size: 20px
+}
+
+.portfolioseccion p {
+    color:#FFFF00;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+    font-size: 20px
+}
+
+.contactoseccion p {
+    color:#FFFF00;
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
+    font-size: 20px
+}
+
+.portfoliotitulo {
+    height: 50px;
+    background-color: rgba(0,0,0,.8);
+    display: flex;
+    justify-content: space-around;
+    color:#FFFF00;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 50px;
+    padding-top: 50px;
+    padding-bottom: 20px
+}
+
+.grilla img{
+    width: 100%
+}
+
+.footer {
+    background-color: rgba(0,0,0,.8);
+    color:white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center
+}
+
+.formulario {
+    display:flex;
+    flex-direction: column;
+    margin-top: 30px
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #FFFF00;
+    border-radius: 4px;
+    background: none
+}
+
+input[type=text-area] {
+    width: 100%;
+    height: 300px;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #FFFF00;
+    border-radius: 4px;
+    background: none
+}
+
+input[type=submit] {
+    width: 100%;
+    padding: 8px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid #FFFF00;
+    border-radius: 4px;
+    background: #FFFF00;
+    color: white
+  }
+
+
+@media only screen and (max-width: 480px) {
+    
+.menu {
+    width: 100%;
+    height: 100px;
+    background-color: rgba(0,0,0,.8);
+    display: flex;
+    flex-direction: column;
+}
+
+.nav a {
+    font-size: 18px;
+}
+
+.principal {
+    width: 100%
+}
+
+.primerainfo {
+    width: 100%;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px
+}
+
+.imagenoficina {
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px
+}
+
+
+.textoficina {
+    width: 90%;
+    padding: 0px;
+    margin-top: -20px;
+    margin-bottom: 30px
+}
+
+.secciones {
+    height: 150px;
+    padding: 0px;
+    padding-top: 60px
+}
+
+.nosotrasseccion img {
+    width: 90px;
+    height: 90px;
+}
+
+.portfolioseccion img {
+    width: 90px;
+    height: 90px;
+}
+
+.contactoseccion img {
+    width: 90px;
+    height: 90px;
+}
+
+.nosotrasseccion p {
+    font-size: 18px
+}
+
+.portfolioseccion p {
+    font-size: 18px
+}
+
+.contactoseccion p {
+    font-size: 18px
+}
+
+.portfoliotitulo {
+    font-size: 40px
+}
+
+.footer {
+    background-color: rgba(0,0,0,.8);
+    color:white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px
+}
+
 }
