--- a/TP1.css
+++ b/TP1.css
@@ -74,39 +74,63 @@ body {
 }
 
 .nosotrasseccion img {
+    margin-top: 30px;
     width: 150px;
     height: 150px;
+    margin-bottom: 30px
 }
 
 .portfolioseccion img {
+    margin-top: 30px;
     width: 150px;
     height: 150px;
+    margin-bottom: 30px
 }
 
 .contactoseccion img {
+    margin-top: 30px;
     width: 150px;
     height: 150px;
+    margin-bottom: 30px
 }
 
-.nosotrasseccion p {
+.nosotrasseccion {
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolioseccion {
+    display: flex;
+    flex-direction: column;
+}
+
+.contactoseccion {
+    display: flex;
+    flex-direction: column;
+}
+
+.nosotrasseccion a {
     color:#FFFF00;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
-    font-size: 20px
+    font-size: 20px;
+    text-decoration: none
 }
 
-.portfolioseccion p {
+.portfolioseccion a {
     color:#FFFF00;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
-    font-size: 20px
+    font-size: 20px;
+    text-decoration: none
 }
 
-.contactoseccion p {
+.contactoseccion a {
     color:#FFFF00;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;;
-    font-size: 20px
+    font-size: 20px;
+    text-decoration: none
 }
 
 .portfoliotitulo {
@@ -218,7 +242,8 @@ input[type=submit] {
 .secciones {
     height: 150px;
     padding: 0px;
-    padding-top: 60px
+    padding-top: 60px;
+    padding-bottom: 60px
 }
 
 .nosotrasseccion img {
@@ -234,18 +259,6 @@ input[type=submit] {
 .contactoseccion img {
     width: 90px;
     height: 90px;
-}
-
-.nosotrasseccion p {
-    font-size: 18px
-}
-
-.portfolioseccion p {
-    font-size: 18px
-}
-
-.contactoseccion p {
-    font-size: 18px
 }
 
 .portfoliotitulo {
