--- a/TP1.css
+++ b/TP1.css
@@ -27,8 +27,9 @@ body {
 }
 
 .nav {
-    justify-self: center;
-    align-self: center;
+    width: 550px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .nav a {
@@ -36,7 +37,6 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #FFFF00;
     text-decoration: none;
-    margin-left: 50px
 }
 
 .primerainfo {
